5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1836_1278.log
== TEST (2019-07-01 19:42:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = input(int("Cidade 1: "))
y = input(int("Cidade 2: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v1 = zeros(7,dtype=int)
for i in range(7):
	v1[i] = aux
	aux = aux + 1
for i in range(7):
	if(x==v1[i]):
		a = i
	if(y==v1[i]):
		b = i
j = 0 
while (x!=-1 or y!=-1):
	a = a  + 1
	print(a)		
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:42:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = int(input("Cidade 1: "))
y = int(input("Cidade 2: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v1 = zeros(7,dtype=int)
for i in range(7):
	v1[i] = aux
	aux = aux + 1
for i in range(7):
	if(x==v1[i]):
		a = i
	if(y==v1[i]):
		b = i
j = 0 
while (x!=-1 or y!=-1):
	a = a  + 1
	print(a)		
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:49:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = int(input("Cidade 1: "))
y = int(input("Cidade 2: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v1 = zeros(7,dtype=int)
c = 0
while (x!=-1 or y!=-1):
	for i in range(7):
		v1[i] = aux
		aux = aux + 1
	for i in range(7):
		if(x==v1[i]):
			a = i
		if(y==v1[i]):
			b = i
	c = c  + 1

j = 0 
	print(a)		
	




-- ERROR:
File "XXXX", line 31
    print(a)		
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:49:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = int(input("Cidade 1: "))
y = int(input("Cidade 2: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v1 = zeros(7,dtype=int)
c = 0
while (x!=-1 or y!=-1):
	for i in range(7):
		v1[i] = aux
		aux = aux + 1
	for i in range(7):
		if(x==v1[i]):
			a = i
		if(y==v1[i]):
			b = i
	c = c  + 1


	print(a)		
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:59:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = int(input("Cidade 1: "))
y = int(input("Cidade 2: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v1 = zeros(7,dtype=int)
c = 0
while (x!=-1 or y!=-1):
	c = c  + 1
	for i in range(7):
		v1[i] = aux
		aux = aux + 1
	for i in range(7):
		if(x==v1[i]):
			a = i
		if(y==v1[i]):
			b = i
	
	print(c)		
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:03:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
c = 0
x = int(input("Cidade 1: "))
y = int(input("Cidade 2: "))
	while (x!=-1 or y!=-1):
		c = c + quadro[x//111-1, y //111-1] 
		x=y
		y = int(input("Cidade 2: "))
print(c)
		


-- EXECUTION TIME:
0.646628
-- ERROR:
  File "/home/codebench/codes/1836/1278/main.py", line 14
    while (x!=-1 or y!=-1):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:03:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
c = 0
x = int(input("Cidade 1: "))
y = int(input("Cidade 2: "))
	while (x!=-1 or y!=-1):
		c = c + quadro[x//111-1, y //111-1] 
		x=y
		y = int(input("Cidade 2: "))
print(c)
		


-- ERROR:
File "XXXX", line 14
    while (x!=-1 or y!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:03:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
c = 0
x = int(input("Cidade 1: "))
y = int(input("Cidade 2: "))
while (x!=-1 or y!=-1):
	c = c + quadro[x//111-1, y //111-1] 
	x=y
	y = int(input("Cidade 2: "))
print(c)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:04:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
c = 0
x = int(input("Cidade 1: "))
y = int(input("Cidade 2: "))
while (y!=-1):
	c = c + quadro[x//111-1, y //111-1] 
	x=y
	y = int(input("Cidade 2: "))
print(c)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:04:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
c = 0
x = int(input("Cidade 1: "))
y = int(input("Cidade 2: "))
while (y!=-1):
	c = c + quadro[x//111-1, y //111-1] 
	x=y
	y = int(input("Cidade 2: "))
print(c)
		


-- EXECUTION TIME:
0.865528
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
